# vinyasa

./: .gitignore  README.md  Vinyasa.pptx  pyproject.toml
model/: keras_model.h5  labels.txt
src/: main.py  model.py
